--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,6 +82,13 @@
 						<li class="nav-link">
 						{% endif %}
 						<a class="mx-1" href="/software/">software</a></li>
+						{% if page.categories.first == 'projects' %}
+						<li class="nav-link active">
+						{% else %}
+						<li class="nav-link">
+						{% endif %}
+						<a class="mx-1" href="/software/">projects</a></li>
+
 						{% if page.categories.first == 'team' %}
 						<li class="nav-link active">
 						{% else %}
