--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,7 +87,7 @@
 						{% else %}
 						<li class="nav-link">
 						{% endif %}
-						<a class="mx-1" href="/software/">projects</a></li>
+						<a class="mx-1" href="/projects/">projects</a></li>
 
 						{% if page.categories.first == 'team' %}
 						<li class="nav-link active">
