--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -57,7 +57,7 @@ categories:
 			<a class="off" href="https://github.com/{{ tool.repo }}">github.com/{{ tool.repo | replace: "/", "/<wbr>" | replace: "_", "_<wbr>" }}</a>
 		</div>
 		<div class="smallhead">
-			Docher Hub
+			Docker Hub
 		</div>
 		<div class="pad-left note">
 			<div class="smallspacer"></div>
@@ -84,32 +84,7 @@ categories:
 		<div class="bigspacer"></div>
 		<div class="spacer"></div>
 
-		{% for page in site.pages %}
-			{% if page.tool == tool.title %}
-			<!-- {% increment pagecount %} -->
-			{% endif %}
-		{% endfor %}
 
-		{% if pagecount > 1 %}
-		<div class="smallhead">
-			Pages
-		</div>
-		<div class="pad-left smallnote">
-			<ul class="list-unstyled">
-			{% for page in site.pages %}
-				{% if page.tool == tool.title %}
-				<div class="smallspacer"></div>
-				<li>
-					<a class="off" href="{{ page.url | replace: 'index.html', '' }}">
-					{{ page.title | replace: '/', ' / ' | replace: tool.title, '<i class="fa fa-folder-open-o"></i> ' }}
-					</a>
-				</li>
-				{% endif %}
-			{% endfor %}
-			</ul>
-		</div>
-		<div class="spacer"></div>
-		{% endif %}
 
 	</div>
 	<div class="col-lg-8">
