--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -36,7 +36,7 @@ categories:
     </div>
 		<p>
 		<div class="head">
-			{{ tool.description }}
+<!--			{{ tool.description }}-->
 		</div>
 	</div>
 </div>
@@ -58,7 +58,7 @@ categories:
 		</div>
 		<div class="pad-left note">
 			<div class="smallspacer"></div>
-			<i class="fa fa-cog fa-fw"></i>
+			<i class="fa fa-github-alt fa-fw"></i>
 			<a class="off" href="https://github.com/{{ tool.repo }}">{{ tool.repo }}</a>
 		</div>
 		<div class="smallhead">
@@ -66,7 +66,7 @@ categories:
 		</div>
 		<div class="pad-left note">
 			<div class="smallspacer"></div>
-			<i class="fa fa-cog fa-fw"></i>
+			<i class="fab fa-docker fa-fw"></i>
 			<a class="off" href="https://hub.docker.com/r/{{ tool.docker }}">{{ tool.docker }}</a>
 		</div>
 		<div class="bigspacer"></div>
