--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -79,16 +79,17 @@ categories:
 			Contributors
 		</div>
 		<div class="pad-left note">
-		        {% assign contributor = tool.contributors %}
-<!--			<div class="smallspacer"></div>
+		        {% for contributor in tool.contributors %}
+			<!-- <div class="smallspacer"></div>
 			<div>
 				<a class="off" href="{{ contributor.url }}">
     			<img class="pull-left avatar" src="{{ contributor.avatar }}"> -->
     			<div class="handlebox" style="padding-left:5px;"">
     				{{ contributor }}
     			</div>
- 				</a>
- 			</div>			
+ 				<!-- </a> 
+ 			</div>	-->
+ 			{% endfor %}		
 		</div>
 		<div class="bigspacer"></div>
 		<div class="spacer"></div>
