--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -79,17 +79,21 @@ categories:
 			Contributors
 		</div>
 		<div class="pad-left note">
+		<ol class="breadcrumb">
 		        {% for contributor in tool.contributors %}
 			<!-- <div class="smallspacer"></div>
 			<div>
 				<a class="off" href="{{ contributor.url }}">
     			<img class="pull-left avatar" src="{{ contributor.avatar }}"> -->
     			<div class="handlebox" style="padding-left:5px;"">
-    				{{ contributor }}
+				<li class="breadcrumb-item">
+					<a class="off" href="/team/{{ contributor }}">{{ contributor }}</a>
+				</li>
     			</div>
  				<!-- </a> 
  			</div>	-->
  			{% endfor %}		
+		</ol>
 		</div>
 		<div class="bigspacer"></div>
 		<div class="spacer"></div>
