--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -74,22 +74,22 @@ categories:
 		</div>
 		<div class="bigspacer"></div>
 		{% endif %}
-		<div class="bigspacer"></div>
 		<div class="smallhead">
 			Contributors
 		</div>
 		<div class="pad-left note">
-		<ol class="breadcrumb">
+		<ol>
 		        {% for contributor in tool.contributors %}
 			<!-- <div class="smallspacer"></div>
 			<div>
 				<a class="off" href="{{ contributor.url }}">
     			<img class="pull-left avatar" src="{{ contributor.avatar }}"> -->
-    			<div class="handlebox" style="padding-left:5px;"">
-				<li class="breadcrumb-item">
-					<a class="off" href="/team/{{ contributor }}">{{ contributor }}</a>
-				</li>
-    			</div>
+    			{% assign memberlink: contributor | downcase | replace: " ", "-" %}
+			<li>
+	    			<div class="handlebox" style="padding-left:5px;"">
+					<a class="off" href="/team/{{ memberlink }}">{{ contributor }}</a>
+	    			</div>
+			</li>
  				<!-- </a> 
  			</div>	-->
  			{% endfor %}		
