--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -69,7 +69,7 @@ categories:
 		</div>
 		<div class="pad-left note">
 			<div class="smallspacer"></div>
-			<i class="fab fa-docker"></i>
+			<i class="fa fa-docker-alt fa-fw"></i>
 			<a class="off" href="https://hub.docker.com/r/{{ tool.docker }}">{{ tool.docker }}</a>
 		</div>
 		<div class="bigspacer"></div>
@@ -84,7 +84,7 @@ categories:
 			<div>
 				<a class="off" href="{{ contributor.url }}">
     			<img class="pull-left avatar" src="{{ contributor.avatar }}"> -->
-    			{% assign memberlink: contributor | downcase | replace: " ", "-" %}
+    			{% assign memberlink: contributor | downcase | replace: ' ', '-' %}
 			<li>
 	    			<div class="handlebox" style="padding-left:5px;"">
 					<a class="off" href="/team/{{ memberlink }}">{{ contributor }}</a>
