--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -84,7 +84,7 @@ categories:
 			<div>
 				<a class="off" href="{{ contributor.url }}">
     			<img class="pull-left avatar" src="{{ contributor.avatar }}"> -->
-    			{% assign memberlink: contributor | downcase | replace: ' ', '-' %}
+    			{% assign memberlink = contributor | downcase | replace: ' ', '-' %}
 			<li>
 	    			<div class="handlebox" style="padding-left:5px;"">
 					<a class="off" href="/team/{{ memberlink }}">{{ contributor }}</a>
