--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -78,7 +78,7 @@ categories:
 			Contributors
 		</div>
 		<div class="pad-left note">
-		<ol>
+		<ul>
 		        {% for contributor in tool.contributors %}
 			<!-- <div class="smallspacer"></div>
 			<div>
@@ -86,14 +86,16 @@ categories:
     			<img class="pull-left avatar" src="{{ contributor.avatar }}"> -->
     			{% assign memberlink = contributor | downcase | replace: ' ', '-' %}
 			<li>
+				<div class="smallspacer"></div>
 	    			<div class="handlebox" style="padding-left:5px;"">
+		    			<i class="fa fa-globe fa-fw"></i>
 					<a class="off" href="/team/{{ memberlink }}">{{ contributor }}</a>
 	    			</div>
 			</li>
  				<!-- </a> 
  			</div>	-->
  			{% endfor %}		
-		</ol>
+		</ul>
 		</div>
 		<div class="bigspacer"></div>
 		<div class="spacer"></div>
